--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <section id="about">
         <div class="me-container">
-            <img src="./assets/profile-pic 2.JPG" alt="profile-pic" class="me-pic-container">
+            <img src="" alt="profile-pic" class="me-pic-container">
             <article class="me-headers">
                 <h1 class="me-header-h1">Yusuf Ahmed</h1>
                 <span  class="text" style="margin: 0;">Aspiring Software Engineer <br>based in London, UK</span>
